--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,13 @@
 {
-    "name": "Base44 APP",
-    "short_name": "Base44",
+    "name": "Chama Manager",
+    "short_name": "Chama",
     "start_url": "/",
     "display": "standalone",
     "background_color": "#ffffff",
     "theme_color": "#0ea5a4",
     "icons": [
         {
-            "src": "https://base44.com/logo_v2.svg",
+            "src": "/favicon.svg",
             "sizes": "192x192",
             "type": "image/svg+xml"
         }
